Remove use of Guava `ImmutableMap` class
The `java.util.Map` now has a `.of()` method that does what we were getting from Google's Guava, so I replaced all the `ImmutableMap`s with `Map`s, and removed the dependency on Guava.